--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-aboutus.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-aboutus.html
@@ -446,27 +446,27 @@
                 </p>
                 <!-- about us gallery -->
                 <div class="aboutus__gallery">
-                    <!-- gallery images -->
+                    <!-- gallery images 1 -->
                     <div class="aboutus__gallery--imgcards">
                         <img src="." alt="gallery-images" class="aboutus__gallery--imgcards_image">
                     </div>
-                    <!-- gallery images -->
+                    <!-- gallery images 2 -->
                     <div class="aboutus__gallery--imgcards">
                         <img src="." alt="gallery-images" class="aboutus__gallery--imgcards_image">
                     </div>
-                    <!-- gallery images -->
+                    <!-- gallery images 3 -->
                     <div class="aboutus__gallery--imgcards">
                         <img src="." alt="gallery-images" class="aboutus__gallery--imgcards_image">
                     </div>
-                    <!-- gallery images -->
+                    <!-- gallery images 4 -->
                     <div class="aboutus__gallery--imgcards">
                         <img src="." alt="gallery-images" class="aboutus__gallery--imgcards_image">
                     </div>
-                    <!-- gallery images -->
+                    <!-- gallery images 5 -->
                     <div class="aboutus__gallery--imgcards">
                         <img src="." alt="gallery-images" class="aboutus__gallery--imgcards_image">
                     </div>
-                    <!-- gallery images -->
+                    <!-- gallery images 6 -->
                     <div class="aboutus__gallery--imgcards">
                         <img src="." alt="gallery-images" class="aboutus__gallery--imgcards_image">
                     </div>
