--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-pagination.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-pagination.html
@@ -510,7 +510,7 @@
                 <div class="container__cards">
                     <!-- left image container of card -->
                     <a href="#" class="container__cards--cover">
-                        <img src="." alt="pcard-img" class="container__cards--cover">
+                        <img src="." alt="pcard-img" class="container__cards--cover_img">
                     </a>
                     <!-- right and center info container of card -->
                     <div class="container__cards--info">
