update March 14, 2023 at 11:59

--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -474,35 +474,35 @@
                         <div class="section2-exppopcateg__container--cards_cover">
                             <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
+                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 1</p>
                     </a>
                     <!-- explore popular categories section cards container circles 2 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
                             <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
+                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 2</p>
                     </a>
                     <!-- explore popular categories section cards container circles 3 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
                             <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
+                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 3</p>
                     </a>
                     <!-- explore popular categories section cards container circles 4 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
                             <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
+                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 4</p>
                     </a>
                     <!-- explore popular categories section cards container circles 5 -->
                     <a href="#" class="section2-exppopcateg__container--cards">
                         <div class="section2-exppopcateg__container--cards_cover">
                             <img src="." alt="ccards-images" class="section2-exppopcateg__container--cards_cover-img">
                         </div>
-                        <p class="section2-exppopcateg__container--cards_name"></p>
+                        <p class="section2-exppopcateg__container--cards_name">Lorem, ipsum dolor 5</p>
                     </a>
                 </div>
             </div>
@@ -564,35 +564,35 @@
                         <div class="section4-exppopbrands__container--cards_cover">
                             <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name"></p>
+                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 1</p>
                     </a>
                     <!-- explore popular brands section cards container circles 2 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
                             <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name"></p>
+                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 2</p>
                     </a>
                     <!-- explore popular brands section cards container circles 3 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
                             <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name"></p>
+                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 3</p>
                     </a>
                     <!-- explore popular brands section cards container circles 4 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
                             <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name"></p>
+                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 4</p>
                     </a>
                     <!-- explore popular brands section cards container circles 5 -->
                     <a href="#" class="section4-exppopbrands__container--cards">
                         <div class="section4-exppopbrands__container--cards_cover">
                             <img src="." alt="bcards-images" class="section4-exppopbrands__container--cards_cover-img">
                         </div>
-                        <p class="section4-exppopbrands__container--cards_name"></p>
+                        <p class="section4-exppopbrands__container--cards_name">Lorem, ipsum dolor 5</p>
                     </a>
                 </div>
             </div>
