--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -741,22 +741,127 @@
                 <!-- privacy policies -->
                 <div class="privacypolicy__text">
                     <!-- headers -->
-                    <h3>LOREM BUT NOT IPSUM</h3>
+                    <h3>Privacy Policy for Ploranza</h3>
+                    <br>
                     <!-- text -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit omnis corrupti commodi laboriosam delectus magni, quas ipsam autem quisquam facere.
+                        Effective date: 2023-03-14
                     </p>
-                    <!-- headers -->
-                    <h3>LOREM BUT NOT IPSUM</h3>
+                    <br>
                     <!-- text -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit omnis corrupti commodi laboriosam delectus magni, quas ipsam autem quisquam facere.
-                    </p>
+                         At Ploranza, we value your privacy and are committed to protecting your personal information. 
+                        This Privacy Policy describes how we collect, use, and disclose information that we obtain 
+                        about visitors to our website, Ploranza.com (the "Site"), and customers who purchase our 
+                        products and services (collectively, "Services"). <br>
+                         By using our Site or Services, you consent to our collection, use, and disclosure of your 
+                        information in accordance with this Privacy Policy.
+                    </p> <br> <br>
                     <!-- headers -->
-                    <h3>LOREM BUT NOT IPSUM</h3>
+                    <h3>1. Information We Collect</h3>
+                    <br>
                     <!-- text -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit omnis corrupti commodi laboriosam delectus magni, quas ipsam autem quisquam facere.
+                         We collect information from you when you visit our Site or use our Services, 
+                        such as: <br>
+                         Personal information, including your name, email address, billing address, 
+                        shipping address, and payment information. <br>
+                         Information about your use of our Site or Services, including your IP address, 
+                        browser type, and the pages you visit. <br>
+                         Information you provide when you contact us, such as your name, email address, 
+                        and the content of your message. <br>
+                         Other information we obtain from third-party sources, such as social media 
+                        platforms.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>2. How We Use Your Information</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We use the information we collect to: <br>
+                         Provide our Services to you, including processing your orders and payments. <br>
+                         Communicate with you about our Services, such as sending you marketing emails 
+                        and newsletters. <br>
+                         Improve our Site and Services, such as by analyzing how our users interact with 
+                        our Site. <br>
+                         Respond to your inquiries and provide customer support. <br>
+                         Comply with legal obligations, such as tax and accounting requirements.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>3. How We Disclose Your Information</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We may disclose your information to third parties in the following circumstances: <br>
+                         With your consent. <br>
+                         To our service providers and partners who assist us in providing our Services, 
+                        such as payment processors and shipping companies. <br>
+                         To comply with legal obligations, such as responding to a subpoena or other legal 
+                        request. <br>
+                         In connection with a merger, acquisition, or other business transaction involving 
+                        Ploranza. <br>
+                         To protect the rights, property, or safety of Ploranza or others.
+                   </p> <br> <br>
+                    <!-- headers -->
+                    <h3>4. Cookies and Other Tracking Technologies</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We use cookies and other tracking technologies to collect information 
+                        about your use of our Site and Services. Cookies are small data files that 
+                        are placed on your computer or mobile device when you visit a website. 
+                        We use cookies to remember your preferences, understand how our users 
+                        interact with our Site, and personalize your experience. <br>
+                         You can control cookies through your browser settings. However, disabling 
+                        cookies may limit your ability to use certain features of our Site and 
+                        Services.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>5. Security</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We take reasonable measures to protect your information from unauthorized 
+                        access and use. However, no security measure is perfect, and we cannot 
+                        guarantee the security of your information.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>6. Children's Privacy</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         Our Site and Services are not directed to children under the age of 13, 
+                        and we do not knowingly collect personal information from children under 
+                        the age of 13. If we become aware that we have collected personal 
+                        information from a child under the age of 13, we will take steps to delete 
+                        the information as soon as possible.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>7. Changes to This Privacy Policy</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We may update this Privacy Policy from time to time. If we make material 
+                        changes, we will notify you by posting a notice on our Site or by sending 
+                        you an email. Your continued use of our Site or Services after any such 
+                        update constitutes your acceptance of the updated Privacy Policy.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>8. Contact Us</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         If you have any questions or concerns about this Privacy Policy, or if you 
+                        would like to exercise any of your rights under applicable privacy laws 
+                        (such as the right to access or delete your personal information), please 
+                        contact us at: <br>
+                         Ploranza Customer Support <br>
+                         Email: support@ploranza.com <br>
+                         Address: [INSERT ADDRESS] <br>
+                         We will respond to your request as soon as possible and no later than the 
+                        time period required by applicable law. Please note that we may require 
+                        additional information from you to verify your identity and to process your 
+                        request.
                     </p>
                 </div>
             </div>
@@ -769,22 +874,162 @@
                 <!-- terms and condition -->
                 <div class="termsofuse__text">
                     <!-- headers -->
-                    <h3>LOREM BUT NOT IPSUM</h3>
+                    <h3>Terms and Conditions for Ploranza</h3>
+                    <br>
                     <!-- text -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit omnis corrupti commodi laboriosam delectus magni, quas ipsam autem quisquam facere.
-                    </p>
+                        Effective date: [DATE]
+                    </p> <br>
+                    <!-- text -->
+                    <p>
+                         Welcome to Ploranza.com (the "Site"), operated by [COMPANY NAME] ("Ploranza," "we," "us," 
+                        or "our"). These Terms and Conditions ("Terms") govern your use of the Site and our 
+                        products and services (collectively, the "Services"). <br>
+                         By accessing or using the Site or Services, you agree to be bound by these Terms. If you 
+                        do not agree to these Terms, you may not access or use the Site or Services.
+                    </p> <br> <br>
                     <!-- headers -->
-                    <h3>LOREM BUT NOT IPSUM</h3>
+                    <h3>1. Use of Site and Services</h3>
+                    <br>
                     <!-- text -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit omnis corrupti commodi laboriosam delectus magni, quas ipsam autem quisquam facere.
-                    </p>
+                         You may use the Site and Services only for lawful purposes and in accordance with these Terms. 
+                        You agree not to use the Site or Services: <br>
+                         In any way that violates any applicable federal, state, local, or international law or 
+                        regulation. <br>
+                         To engage in any activity that interferes with or disrupts the Site or Services, or the 
+                        servers and networks connected to the Site or Services. <br>
+                         To impersonate or attempt to impersonate Ploranza, a Ploranza employee, another user, or any 
+                        other person or entity. <br>
+                         To engage in any activity that could disable, overburden, damage, or impair the Site or 
+                        Services or interfere with any other party's use of the Site or Services.
+                    </p> <br> <br>
                     <!-- headers -->
-                    <h3>LOREM BUT NOT IPSUM</h3>
+                    <h3>2. Intellectual Property</h3>
+                    <br>
                     <!-- text -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit omnis corrupti commodi laboriosam delectus magni, quas ipsam autem quisquam facere.
+                         The Site and Services, including all text, graphics, logos, images, software, and other 
+                        content, are the property of Ploranza or its licensors and are protected by United States and 
+                        international copyright, trademark, and other intellectual property laws. <br>
+                         You may not use any trademark, service mark, logo, or trade name of Ploranza without our prior 
+                        written consent.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>3. Product Information and Pricing</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We make every effort to display as accurately as possible the colors, features, specifications, 
+                        and details of our products available on the Site. However, we do not guarantee that the 
+                        colors, features, specifications, and details of the products will be accurate, complete, 
+                        reliable, current, or error-free. <br>
+                         The prices displayed on the Site are quoted in U.S. dollars and are subject to change without 
+                        notice. We reserve the right to refuse or cancel any order at any time for any reason.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>4. Payment</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We accept payment by credit card, debit card, and other payment methods that we make available 
+                        on the Site. By submitting your payment information, you authorize us to charge your payment 
+                        method for the total amount of your order (including any applicable taxes and shipping fees).
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>5. Shipping and Delivery</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We ship our products to locations within the United States and its territories. Delivery 
+                        dates are estimates and are not guaranteed.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>6. Returns and Refunds</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         If you are not completely satisfied with your purchase, you may return it to us for a refund 
+                        or exchange within [NUMBER] days of the purchase date. Please see our Returns and Refunds 
+                        Policy for more information.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>7. Disclaimer of Warranties</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         The Site and Services are provided "as is" and "as available" without warranties of any 
+                        kind, either express or implied, including, but not limited to, implied warranties of 
+                        merchantability, fitness for a particular purpose, and non-infringement.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>8. Limitation of Liability</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         In no event shall Ploranza or its affiliates, licensors, service 
+                        providers, employees, agents, officers, or directors be liable for any 
+                        direct, indirect, special, incidental, consequential, or punitive 
+                        damages, including, but not limited to, personal injury, pain and 
+                        suffering, emotional distress, loss of revenue, loss of profits, loss of 
+                        business or anticipated savings, loss of use, loss of goodwill, loss of 
+                        data, and whether caused by tort (including negligence), breach of 
+                        contract, or otherwise, even if foreseeable. <br>
+                         Ploranza's liability shall be limited to the maximum extent permitted by 
+                        law. If applicable law does not allow limitations or exclusions of 
+                        liability for incidental or consequential damages, the above limitations 
+                        may not apply to you.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>9. Indemnification</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         You agree to indemnify, defend, and hold harmless Ploranza, its 
+                        affiliates, licensors, and service providers, and its and their respective 
+                        officers, directors, employees, contractors, agents, licensors, suppliers, 
+                        successors, and assigns from and against any claims, liabilities, damages, 
+                        judgments, awards, losses, costs, expenses, or fees (including reasonable 
+                        attorneys' fees) arising out of or relating to your violation of these 
+                        Terms or your use of the Site or Services.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>10. Governing Law and Dispute Resolution</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         These Terms shall be governed by and construed in accordance with the laws of the State 
+                        of [STATE], without regard to its conflict of law provisions. <br>
+                         Any dispute arising out of or relating to these Terms, the Site, or the Services shall be 
+                        resolved through arbitration administered by the American Arbitration 
+                        Association in accordance with its Commercial Arbitration Rules, and 
+                        judgment on the award rendered by the arbitrator(s) may be entered in any 
+                        court having jurisdiction thereof.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>11. Changes to Terms</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         We reserve the right to modify or revise these Terms at any time and 
+                        without prior notice. Any changes to these Terms will be effective 
+                        immediately upon posting on the Site. Your continued use of the Site or 
+                        Services after the posting of revised Terms means that you accept and 
+                        agree to the changes.
+                    </p> <br> <br>
+                    <!-- headers -->
+                    <h3>12. Contact Us</h3>
+                    <br>
+                    <!-- text -->
+                    <p>
+                         If you have any questions or concerns about these Terms or the Site or 
+                        Services, please contact us at:
+                        <br>
+                        Ploranza Customer Support
+                        <br>
+                        Email: support@ploranza.com
+                        <br>
+                        Address: [INSERT ADDRESS]
                     </p>
                 </div>
             </div>
@@ -796,7 +1041,7 @@
                 </button>
                 <!-- alert image yellow triangle with ! sign -->
                 <div class="comingsoon__image">
-                    <img src="." alt="alert-img" class="comingsoon__image--symbol">
+                    <img src="./Ploranza-assets/dropdownmenu-images/alert.png" alt="alert-img" class="comingsoon__image--symbol">
                 </div>
                 <!-- info -->
                 <div class="comingsoon__text">Sorry, this feature is not available now.</div>
